# thoughtgraph

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs  ui.rs  visualization.rs
