[package]
name = "thoughtgraph"
version = "0.1.0"
edition = "2021"
description = "A library and CLI tool for managing interconnected thoughts with bidirectional references and tags"
authors = ["ThoughtGraph Contributors"]
license = "MIT"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
dialoguer = "0.11"
tempfile = "3.8"
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
regex = "1.10"

[[bin]]
name = "thoughts"
path = "src/main.rs"

[lib]
name = "thoughtgraph"
path = "src/lib.rs"
