[package]
name = "thoughtgraph"
version = "0.1.0"
edition = "2021"
description = "A library and CLI tool for managing interconnected thoughts with bidirectional references and tags"
authors = ["ThoughtGraph Contributors"]
license = "MIT"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
tempfile = "3.8"
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
regex = "1.10"
indicatif = "0.17.11"
console = "0.15.11"

[[bin]]
name = "thoughts"
path = "src/main.rs"

[lib]
name = "thoughtgraph"
path = "src/lib.rs"
